[gd_scene load_steps=12 format=3 uid="uid://dskr0k8xsu5ex"]

[ext_resource type="Script" path="res://enemy.gd" id="1_qub6d"]
[ext_resource type="Texture2D" uid="uid://b5vh4ajlotbof" path="res://assets/tilesets/Enemy Characters Pack SpriteSheet[20x20][FREE] - RottingPixels/enemies-spritesheet.png" id="2_t4pkr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1oi1t"]
atlas = ExtResource("2_t4pkr")
region = Rect2(20, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_1polh"]
atlas = ExtResource("2_t4pkr")
region = Rect2(0, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwp0l"]
atlas = ExtResource("2_t4pkr")
region = Rect2(40, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_acs43"]
atlas = ExtResource("2_t4pkr")
region = Rect2(60, 0, 20, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_dkj4l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1oi1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1polh")
}],
"loop": true,
"name": &"move_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwp0l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_acs43")
}],
"loop": true,
"name": &"move_right",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_5blou"]
radius = 22.0227

[sub_resource type="CircleShape2D" id="CircleShape2D_4g5w5"]
radius = 11.0454

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_8j5as"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xf07t"]
radius = 6.0

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_qub6d")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -4)
sprite_frames = SubResource("SpriteFrames_dkj4l")
animation = &"move_left"

[node name="range" type="Area2D" parent="."]
position = Vector2(21, -4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="range"]
position = Vector2(-21, 6)
shape = SubResource("CircleShape2D_5blou")

[node name="hitbox" type="Area2D" parent="."]
position = Vector2(3, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(-4, -6)
shape = SubResource("CircleShape2D_4g5w5")

[node name="take_damage_cooldown" type="Timer" parent="."]

[node name="attack_cooldown" type="Timer" parent="."]

[node name="heal" type="Timer" parent="."]
wait_time = 3.209

[node name="health_bar" type="ProgressBar" parent="."]
modulate = Color(0.619375, 0.092271, 0, 1)
offset_left = -6.0
offset_top = -11.0
offset_right = 6.0
offset_bottom = -5.0
show_percentage = false

[node name="RigidBody2D" type="RigidBody2D" parent="."]
physics_material_override = SubResource("PhysicsMaterial_8j5as")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
position = Vector2(-2, 2)
shape = SubResource("CircleShape2D_xf07t")

[connection signal="body_entered" from="range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="range" to="." method="_on_range_body_exited"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="heal" to="." method="_on_heal_timeout"]
